--- a/index.html
+++ b/index.html
@@ -136,6 +136,46 @@
             </div>
           </div>
         </div>
+        <div class="experience row section-padding" id="resumeRowFour">
+  	      <div class="container experienceContainer" id="rowFourContainer">
+            <h3 class="experienceTitleLead">Work Experience</h3>
+<!--             <img src="assets/images/bulb.gif" alt="brain" id="brainImg">
+ -->              <div class="experienceWrapper">
+                <div class="companyWrapper">
+                  <div class="experienceTitle">UNC Chapel Hill</div>
+                  <div class="time">Feb 2018 - Aug 2018</div>
+                </div>
+                <div class="jobWrapper">
+                  <div class="experienceTitle">Full Stack Development Certification</div>
+                  <div class="companyDescription">
+                    <p>Attended the University's full stack web development certification program.  Certification includes HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Git, C#, Firebase, and ASP.Net</p>  
+                  </div>
+                </div>
+                <div class="companyWrapper">
+                  <div class="experienceTitle">NC State University</div> 
+                  <div class="time">Aug 2012 - May 2014</div> 
+                </div>
+                
+                <div class="jobWrapper">
+                  <div class="experienceTitle">MA American Literature</div> 
+                  <div class="companyDescription">
+                    <p>Received my MA in American Literature, focusing on conceptuatlizations of Modern and Postmodern thought in the American 20th century landscape and beyond.  Full Scholarship + Stipend Recipient.</p>  
+                  </div>
+                </div>
+              <div class="companyWrapper">
+                <div class="experienceTitle">NC State University</div> 
+                <div class="time">Aug 2006 - May 2011</div> 
+              </div> 
+              <div class="jobWrapper">
+                <div class="experienceTitle">BS Civil &AMP; Industrial Engineering </div> 
+                <div class="experienceTitle">BA English Literature</div> 
+                <div class="companyDescription">
+                  <p>Benjamin Franklin Scholarship Recipient; finished with 4.0 in English and 3.8 in Engineering. Editor-in-Chief of college literary magazine "Windhover" for three years, golden crown design award recipeint for all three.</p>   
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
 
