resume section finished

--- a/index.html
+++ b/index.html
@@ -139,45 +139,84 @@
         <div class="experience row section-padding" id="resumeRowFour">
   	      <div class="container experienceContainer" id="rowFourContainer">
             <h3 class="experienceTitleLead">Work Experience</h3>
-<!--             <img src="assets/images/bulb.gif" alt="brain" id="brainImg">
- -->              <div class="experienceWrapper">
+                <div class="experienceWrapper">
                 <div class="companyWrapper">
-                  <div class="experienceTitle">UNC Chapel Hill</div>
-                  <div class="time">Feb 2018 - Aug 2018</div>
+                  <div class="experienceTitle">FurnitureLab</div>
+                  <div class="time">June 2017 - Jan 2018</div>
                 </div>
                 <div class="jobWrapper">
-                  <div class="experienceTitle">Full Stack Development Certification</div>
+                  <div class="experienceTitle">Account Manager</div>
                   <div class="companyDescription">
-                    <p>Attended the University's full stack web development certification program.  Certification includes HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Git, C#, Firebase, and ASP.Net</p>  
+                    <ul>
+                      <li>Managed Sales for California, Colorado, Kansas, Missouri, Oklahoma, and Arkansas.</li>
+                      <li>Maintained existing clients while building new business</li>
+                      <li>Worked with committee to develop 2018 Biz Health &AMP; Marketing Strategy</li>
+                    </ul> 
                   </div>
                 </div>
                 <div class="companyWrapper">
-                  <div class="experienceTitle">NC State University</div> 
-                  <div class="time">Aug 2012 - May 2014</div> 
+                  <div class="experienceTitle">Spoonflower</div> 
+                  <div class="time">Aug 2015 - July 2017</div> 
                 </div>
                 
                 <div class="jobWrapper">
-                  <div class="experienceTitle">MA American Literature</div> 
+                  <div class="experienceTitle">Senior Business Intelligence Analyst</div> 
                   <div class="companyDescription">
-                    <p>Received my MA in American Literature, focusing on conceptuatlizations of Modern and Postmodern thought in the American 20th century landscape and beyond.  Full Scholarship + Stipend Recipient.</p>  
+                      <ul>
+                        <li>Fostered collaboration amongst international teams at eCommerce brand to identify and address issues pertaining to UX</li>
+                        <li>Received CRAFT-E Award, a monthly award from the company recognizing their a top contributor embodying their values. (200 employee company)</li>
+                        <li>Led analytics team to utilization of MySQL to establish real-time Biz Health dashbords for company executives.</li>
+                        <li>Began in Customer Service after Masters.  Moved to analytics after 6 weeks due to Engineering background.</li>
+                      </ul>  
                   </div>
                 </div>
               <div class="companyWrapper">
-                <div class="experienceTitle">NC State University</div> 
-                <div class="time">Aug 2006 - May 2011</div> 
+                <div class="experienceTitle">Almost Everywhere</div> 
+                <div class="time">Aug 2006 - Aug 2015
+                  <br><br>
+                  <img src="assets/images/typewriter.png" alt="typewriter" id="typewriterImg">
+                </div> 
               </div> 
               <div class="jobWrapper">
-                <div class="experienceTitle">BS Civil &AMP; Industrial Engineering </div> 
-                <div class="experienceTitle">BA English Literature</div> 
+                <div class="experienceTitle">Chef/Bartender </div> 
                 <div class="companyDescription">
-                  <p>Benjamin Franklin Scholarship Recipient; finished with 4.0 in English and 3.8 in Engineering. Editor-in-Chief of college literary magazine "Windhover" for three years, golden crown design award recipeint for all three.</p>   
+                  <p>Prior to entering the professional world via Spoonflower, I worked at a handful of great restaurants.  During my undergraduate and graduate degress, cooking paid the bills.  I've been a baker at an atristinal French guild bakery, a sous chef at a high end vegan restaurant, spent years working under a James Beard chef, and bartended at and booked for some of my favorite venues.  These experiences are a big part of where my great customer service attitude comes from.</p>   
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="experience row section-padding" id="resumeRowFive">
+            <div class="container experienceContainer" id="rowFiveContainer">
+              <h3 class="experienceTitleLead2">Individual Enterprise</h3>
+                  <div class="experienceWrapper">
+                  <div class="companyWrapper">
+                    <div class="experienceTitle">Freelance Graphic &AMP; Web Design</div>
+                  </div>
+                  <div class="jobWrapper">
+                    <div class="companyDescription">
+                        <p>
+                          My work as a visual artist translated to digital formats when I learned the Adobe Suite upon starting at Spoonflower.  I've produced more show posters, t-shirt designs, and album art for local venues and bands than I can recall.  To see some samples of my graphic design work, vist the Design | Graphic section through the site navigation.  To see my projects on the web, visit the Web Projects section.
+                        </p>
+                    </div>
+                  </div>
+                  <div class="companyWrapper">
+                    <div class="experienceTitle">Artist</div> 
+                  </div>
+                  <div class="jobWrapper">
+                    <div class="companyDescription">
+                        <p>
+                          I started making art at 22 as a way to take pause while writing my thesis, painting abstractions of scenes from the books I was writing about.  I had my first gallery show the same year, and continued to show nearly monthly for the next four years.  During that period I was twice the Artist-In-Residence at the Blake Street Gallery in Raleigh's historic city market block.  To learn more about my philosphy of art and how it informs my coding practices, visit the art section of my site through the site navigation.
+                        </p>
+                    </div>
+                  </div>
+                  <div id="resumeBottom">
+                      <img src="assets/images/resumeBottomBanner.png" alt="visit my Culture Fit section to know more about me personally!" id="resumeBottomImg">
+                  </div> 
+                </div>
+            </div>
+          </div>
     </div>
-  </div>
 
     <div id="websitesDiv">Websites Page Coming Soon</div>
 
