--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 </div>
             </div>
           </div>
+        </div>
     </div>
 
     <div id="websitesDiv">Websites Page Coming Soon</div>
@@ -301,7 +302,61 @@
 
     <div id="designDiv">Design Page Coming Soon</div>
 
-    <div id="artDiv">Art Page Coming Soon</div>
+    <div id="artDiv">
+      <img src="assets/images/artistBackground.jpg" id="artBackground" alt="artBackground">
+      <div class="jumbotron" id="artPhilJumbo">
+        <h1 id="artHeader">Philosophy of Art</h1>
+        <p>Art is the shield forged against the unpredictable, the sense of looming chaos.  Art surveys our experience and asks of us what is useful, what is worth knowing, what do we pass forward, what do we leave behind, and finally how do we order and transmit our knowing?</p>
+        <p>When art is finished, we find a celebration of humanity and the marks people make on the world.  We value the exceptational in the ordinary, that which is worth telling.  We find respect for people and what they have built for themselves.</p>
+        <p>This site is about my life as a developer, which is inseparable from my life as an artist.  For me, code is a new set of paint and the web is our latest canvas.  When I think about moving individuals and brands onto the web, I ask the same questions: what is useful, what is worth knowing, what do we leave behind, what must we tell, and finally how will we tel it?  In so doing, I seek to find a celebration of the subject, esteem that which is subtly exceptional, and once considered find an order to our approach to masterfully transmit that story.</p>
+        <p>Scroll down to see selections from past gallery installations.</p>
+      </div>
+      <div class="jumbotron" id="carouselJumbo">
+      <div id="artCarouselPage">
+        <div class="row" id="artRowTwo">
+          <div class="col">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <img class="d-block img-fluid" src="assets/images/carousel1.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" src="assets/images/carousel2.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" src="assets/images/carousel3.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" src="assets/images/carousel4.jpg" alt="Fourth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" src="assets/images/carousel5.jpg" alt="Fifth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" src="assets/images/carousel6.jpg" alt="Sixth slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" src="assets/images/carousel7.jpg" alt="Seventh slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
+
+
+
+    </div>
 
     <div id="aboutDiv">
       <div class="row aboutRow">
