--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <img src="assets/images/artistBackground.jpg" id="artBackground" alt="artBackground">
       <div class="jumbotron" id="artPhilJumbo">
         <h1 id="artHeader">Philosophy of Art</h1>
-        <p>Art is the shield forged against the unpredictable, the sense of looming chaos.  Art surveys our experience and asks of us what is useful, what is worth knowing, what do we pass forward, what do we leave behind, and finally how do we order and transmit our knowing?</p>
+        <p>Art is the shield forged against the unpredictable, the sense we have of looming chaos.  Art surveys our experience and asks of us what is useful, what is worth knowing, what do we pass forward, what do we leave behind, and finally how do we order and transmit our knowing?</p>
         <p>When art is finished, we find a celebration of humanity and the marks people make on the world.  We value the exceptational in the ordinary, that which is worth telling.  We find respect for people and what they have built for themselves.</p>
         <p>This site is about my life as a developer, which is inseparable from my life as an artist.  For me, code is a new set of paint and the web is our latest canvas.  When I think about moving individuals and brands onto the web, I ask the same questions: what is useful, what is worth knowing, what do we leave behind, what must we tell, and finally how will we tel it?  In so doing, I seek to find a celebration of the subject, esteem that which is subtly exceptional, and once considered find an order to our approach to masterfully transmit that story.</p>
         <p>Scroll down to see selections from past gallery installations.</p>
