design page added

--- a/index.html
+++ b/index.html
@@ -300,7 +300,92 @@
       </div> 
     </div>
 
-    <div id="designDiv">Design Page Coming Soon</div>
+    <div class="container" id="designDiv">
+      <div class="row" id="designRowOne">
+        <h1 class="designHead">Concert Posters</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/arsonDraftTwo.png" alt="ArsonDaily">
+              <p class="posterText">Commissioned poster for Arson Daily</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/honeyd.png" alt="HoneyDuchess">
+              <p class="posterText">Commissioned poster for Honey Duchess</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/Heavensend2.png" alt="HeavenSend">
+              <p class="posterText">Commissioned poster for The Station, Carrboro</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" id="designRowTwo">
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/casesensitiveshow.jpg" alt="ArsonDaily">
+              <p class="posterText">Commissioned poster for The Station, Carrboro</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/ArsonFinal.png" alt="ArsonDaily2">
+              <p class="posterText">Commissioned poster for The Station, Carrboro</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/kosherfest.jpg" alt="ArsonDaily">
+              <p class="posterText">Commissioned poster for Private Festival in Raleigh</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" id="designRowThree">
+        <h1 class="designHead">Other</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/Blok.jpg" alt="ArsonDaily">
+              <p class="posterText">Vinyl LP Art, commissioned by Vacant Company in Raleigh</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/vacantTape.jpg" alt="HoneyDuchess">
+              <p class="posterText">Cassette Tape Art, commissioned by Vacant Company in Raleigh</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container center-items">
+            <div class="card center-items">
+              <img id="gifAppcoImg" class="designImg" src="assets/images/designFolder/stickers.jpg" alt="HeavenSend">
+              <p class="posterText">Some selections from my line of decal stickers!  Available for sale in boutique gift stores around the Triangle.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div id="artDiv">
       <img src="assets/images/artistBackground.jpg" id="artBackground" alt="artBackground">
