added web projects page content

--- a/index.html
+++ b/index.html
@@ -219,7 +219,63 @@
         </div>
     </div>
 
-    <div id="websitesDiv">Websites Page Coming Soon</div>
+    <div id="websitesDiv">
+        <div id="nonSchoolProjects">
+          <div class="row">
+            <div class="col">
+               <h1 class="projText">PROFESSIONAL:</h1>
+            </div>
+          </div>
+          <div class="row webRow">
+            <div class="col-xs-3">
+              <div class="gamesImgContainer" id="bernarooLink">
+                <a href="https://joewrightnc.github.io/Bernaroo/index.html" target="_blank">
+                <img id="bernarooImg" class="webProjImg" src="assets/images/Bernaroo.png" alt="bootstrapImg">
+                <div class="webOverlay">
+                  <div class="text">Event Management Site commissioned by the Bernaroo Festival in New Bern, NC</div>
+                </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="schoolProjects">
+          <div class="row">
+            <div class="col">
+               <h1 class="projText">SCHOLASTIC:</h1>
+            </div>
+          </div>
+            <div class="row webRow">
+              <div class="col-xs-3">
+                <div class="gamesImgContainer" id="bootstrapPortLink">
+                  <a href="https://joewrightnc.github.io/Bootstrap-Portfolio/index.html" target="_blank">
+                    <img id="boostrapImg" class="webProjImg" src="assets/images/bootstrap.png" alt="bootstrapImg">
+                    <div class="webOverlay">
+                      <div class="text">Mobile Responsive Portfolio, built with Bootstrap Responsiveness</div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="col-xs-3">
+                <div class="gamesImgContainer" id="responsivePortLink">
+                  <a href="https://joewrightnc.github.io/Responsive-Portfolio/" target="_blank">
+                    <img id="responsiveImg" class="webProjImg" src="assets/images/responsive.png" alt="responsiveImg">
+                    <div class="webOverlay">
+                      <div class="text">Mobile Responsive Basic Portfolio, built with only Media Queries (no bootstrap)</div>
+                   </div>
+                  </a>
+                </div>
+              </div>
+              <div class="col-xs-6" id="webAdvert">
+                <h2>Looking for a new site?</h1>
+                  <br>
+                <p>Currently offering steeply discounted rates for select clients.</p>
+                <p>Contact me via Email, Github or LinkedIn!</p>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
 
     <div id="gamesDiv">
       <div id="nonSchoolGames">
@@ -230,7 +286,7 @@
       <div id="schoolProjects">
         <div class="row">]
           <div class="col">
-             <h1 id="schoolProjText">SCHOLASTIC:</h1>
+             <h1 class="projText">SCHOLASTIC:</h1>
           </div>
         </div>
           <div class="row" id="gameImgRow">
