--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                   <img class="d-block img-fluid" src="assets/images/carousel6.jpg" alt="Sixth slide">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block img-fluid" src="assets/images/carousel7.jpg" alt="Seventh slide">
+                  <img class="d-block img-fluid" src="assets/images/Carousel7.jpg" alt="Seventh slide">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
