finished, time for colleage review

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="experienceTitle">BS Civil &AMP; Industrial Engineering </div> 
                 <div class="experienceTitle">BA English Literature</div> 
                 <div class="companyDescription">
-                  <p>Benjamin Franklin Scholarship Recipient; finished with 4.0 in English and 3.8 in Engineering. Editor-in-Chief of college literary magazine "Windhover" for three years, golden crown design award recipeint for all three.</p>   
+                  <p>Benjamin Franklin Scholarship Recipient; finished with 4.0 in English and 3.8 in Engineering. Editor-in-Chief of college literary magazine "Windhover" for three years, golden crown design award recipient for all three.</p>   
                 </div>
               </div>
             </div>
@@ -148,7 +148,7 @@
                   <div class="experienceTitle">Account Manager</div>
                   <div class="companyDescription">
                     <ul>
-                      <li>Managed Sales for California, Colorado, Kansas, Missouri, Oklahoma, and Arkansas.</li>
+                      <li>Managed Sales for California, Kansas, Missouri, Oklahoma, and Arkansas.</li>
                       <li>Maintained existing clients while building new business</li>
                       <li>Worked with committee to develop 2018 Biz Health &AMP; Marketing Strategy</li>
                     </ul> 
@@ -164,9 +164,9 @@
                   <div class="companyDescription">
                       <ul>
                         <li>Fostered collaboration amongst international teams at eCommerce brand to identify and address issues pertaining to UX</li>
-                        <li>Received CRAFT-E Award, a monthly award from the company recognizing their a top contributor embodying their values. (200 employee company)</li>
-                        <li>Led analytics team to utilization of MySQL to establish real-time Biz Health dashbords for company executives.</li>
-                        <li>Began in Customer Service after Masters.  Moved to analytics after 6 weeks due to Engineering background.</li>
+                        <li>Received CRAFT-E Award, a monthly award from the company recognizing a top contributor embodying their values. (200 employee company)</li>
+                        <li>Led cross-departmental team to establish real-time Biz Health dashbords for company executives via MySQL and Amazon QuickSight.</li>
+                        <li>Began in Customer Service after Masters.  Moved to business analytics position after 6 weeks due to Engineering background and analytical proficiencies.</li>
                       </ul>  
                   </div>
                 </div>
@@ -180,7 +180,7 @@
               <div class="jobWrapper">
                 <div class="experienceTitle">Chef/Bartender </div> 
                 <div class="companyDescription">
-                  <p>Prior to entering the professional world via Spoonflower, I worked at a handful of great restaurants.  During my undergraduate and graduate degress, cooking paid the bills.  I've been a baker at an atristinal French guild bakery, a sous chef at a high end vegan restaurant, spent years working under a James Beard chef, and bartended at and booked for some of my favorite venues.  These experiences are a big part of where my great customer service attitude comes from.</p>   
+                  <p>Prior to entering the professional world via Spoonflower, I worked at a handful of great restaurants.  During my undergraduate and graduate degrees, cooking paid the bills.  I've been a baker at an artistinal French guild bakery, a sous chef at a high end vegan restaurant, spent years working under a James Beard chef, and bartended at and booked for some of my favorite music venues.  These experiences are a big part of where my great customer service attitude comes from.</p>   
                 </div>
               </div>
             </div>
@@ -196,7 +196,7 @@
                   <div class="jobWrapper">
                     <div class="companyDescription">
                         <p>
-                          My work as a visual artist translated to digital formats when I learned the Adobe Suite upon starting at Spoonflower.  I've produced more show posters, t-shirt designs, and album art for local venues and bands than I can recall.  To see some samples of my graphic design work, vist the Design | Graphic section through the site navigation.  To see my projects on the web, visit the Web Projects section.
+                          My work as a visual artist translated to digital formats when I learned the Adobe Suite upon starting at Spoonflower.  I've produced more show posters, t-shirt designs, and album art for local venues and bands than I can recall.  To see some samples of my very recent graphic work, vist the Design | Graphic section through the site navigation.  To see my projects on the web, visit the Web Projects section.
                         </p>
                     </div>
                   </div>
@@ -582,7 +582,7 @@
             <span class=cultureHeading>Cats | Dogs</span>
             <p>Yes, I love Both cats and dogs.  If we get to know each other, you'll get to know this because I talk about my animals, like, a lot.  I even have them on my mousepad, see that over there?  If you want to see more of these sweeties give that mousepad a click.</p>
             <p>Lucy was my first pet, and she is a rescue kitty.  I rescued her directly, actually.  I found her at just a couple of days old when out with some friends one evening.  She needed help, and despite being very allergic I couldn't say no.  Now she is my number one workspace invader.</p>
-            <p>Rainer was also a rescue, and has been with the family for about 2 years now.  He had terrible seperation anxiety, but with lots of love he is now the most good boy (I tell him every day).  He never barks, and is always the most popular guy at the Dog Park</p>
+            <p>Rainer was also a rescue, and has been with the family for about 2 years now.  He had terrible seperation anxiety, but with lots of love he is now the most good boy (I tell him every day).  He never barks, and is always the most popular guy at the dog park.</p>
             <p>I'm more than just cats and dogs though, click that arrow to see more.</p>
             <img class="nextArrow" id="petsArrow" src="assets/images/next.png" alt="email">
             <img class="cultureBodyIcons" id="petPad" src="assets/images/pets.JPG" alt="pets">
@@ -599,7 +599,7 @@
       <div id="music">
         <div class="jumbotron cultureBlock" id="musicFirst">
           <span class=cultureHeading>Music</span>
-          <p>Like so many, I too am a lover of music.  I love to play as well as consume.  Music is almost always a great place for me to start a conversation when getting to know someone new. </p>
+          <p>I love music, both playing it myself and going out to see both local and national acts.  Music is almost always a great place for me to start a conversation when getting to know someone new. </p>
           <p>Some favorite genres include: post rock, folk/grassroots, hip hop, indie rock, psych rock, bluegrass--the list really goes on.  I had a radio show in college playing post rock, so I know the most there.</p>
           <p>I wanted to share a few clips of songs I like with you, so click that record icon to see my record player and pick a selection.  When you're finished, click that arrow.</p>
           <img class="cultureBodyIcons" id="guitar" src="assets/images/record.png" alt="guitar">
@@ -779,7 +779,7 @@
               Charles Olson</p><p>
               <i>Selection from In Cold Hell, In Thicket</i>
           </p>
-          <button class="leavePoemBtn recordBtn">Put This One Back</button>
+          <button class="leavePoemBtn recordBtn" id="olsonBtn">Put This One Back</button>
         </div>
         <div id="ginsbergDiv">
           <p>
@@ -862,29 +862,21 @@
           </p>
           <button class="leavePoemBtn recordBtn">Put This One Back</button>
         </div>
-      
-      </div>
-      <div id="campingOutdoors">
-        <div class="jumbotron cultureBlock" id="outdoorsLoad">
-          <p>
-            I love being outdoors, and spend almost every vacation I get going on camping roadtrips.  I'm an avid kayaker, a fan of long backpacking trips, and lover of the mountains.  I also enjoy car camping, and when that's the occasion I go in luxury with an inflatable couch that pulls out to a queen size mattress (one of my favorite luxuries).  I feel certain that one day, I'll be an RV owner.
-          </p>
-          <p>
-            Think of something cool for extra outdoor content. Click here.
-          </p>
-          <img class="cultureBodyIcons" id="trees" src="assets/images/trees.png" alt="trees">
-          <img id="campingArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
-        </div>
-        <div id="trailFinder">
-          Think of something cool for extra outdoor content
-        </div>
       </div>
       <div id="coding">
-        <div class="jumbotron cultureBlock">
-          Joe likes coding.  Think of cool things to say about this.
+        <div class="jumbotron cultureBlock" id="codingFirst">
+            <span class=cultureHeading>Coding</span>
+          <p>As of late, my passion has been coding and the cultures that surround it.  I love how full stack development lets me start at the knowledge of informational logic and data structure from my Engineering undergraduate and apply radical creativity to find creative solutions for complex problems.  I am motivated by the dance in balancing the need to have unique and dynamic web content with the need to have it rendered with as few precise lines as possible.  </p>
+          <p>In college when I worked with Linux, I became fascinated with the open source community and movement.  That interest carried into my Masters in postmodern literature, where I spent a semester in independent study examining the Open Source model as prototypical postmodern construction.  Now that I'm a full stack developer, contibuting to Open Source and community charitable coding is a big part of my free time.  To see some of the projects I've contributed to, click the computer icon! </p>
+          <img class="cultureBodyIcons" id="computer" src="assets/images/computer.png" alt="computer">
           <img id="codingArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
         </div>
+        <div class="jumbotron cultureBlock" id="openSourceDiv">
+            <p>This page coming soon, still making significant contributions!  Click the computer icon to go back.</p>
+            <img id="computerLeave" src="assets/images/computer.png" alt="computer">
+          </div>
       </div>
+
     </div>
 
 
