added in train app

--- a/index.html
+++ b/index.html
@@ -343,11 +343,24 @@
             <img id="arrow4" class="gamesArrowImg" src="assets/images/carat.png" alt="arrow">
           </div>
           <div class="col">
-            <div class="gamesImgContainer" id="triviaLink">
+            <div class="gamesImgContainer" id="gifzLink">
               <a href="https://joewrightnc.github.io/GifApp/" target="_blank">
                 <img id="gifAppcoImg" class="gamesImg" src="assets/images/plus.png" alt="gifAppImg">
                 <div class="gamesOverlay">
                   <div class="text">NETGIFZ: A Netflix style interface for gif browsing</div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col">
+            <img id="arrow4" class="gamesArrowImg" src="assets/images/carat.png" alt="arrow">
+          </div>
+          <div class="col">
+            <div class="gamesImgContainer" id="trainLink">
+              <a href="https://joewrightnc.github.io/TrainScheduler/" target="_blank">
+                <img id="trainImg" class="gamesImg" src="assets/images/plus.png" alt="trainAppImg">
+                <div class="gamesOverlay">
+                  <div class="text">Train Scheduler: Commuter scheduling app utilizing Firebase to host scheduling data</div>
                 </div>
               </a>
             </div>
