hiding art and design divs, at least for the time being

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <li class="navBtns" id="resumeBtn" role="button"><span class="navSpan">Resume | CV</span></li>
           <li class="navBtns" id="websitesBtn" role="button"><span class="navSpan">Web Projects</span></li>
           <li class="navBtns" id="gamesBtn" role="button"><span class="navSpan">Games | Apps</span></li>
-          <li class="navBtns" id="designBtn" role="button"><span class="navSpan">Design | Graphics</span></li>
-          <li class="navBtns" id="artBtn" role="button"><span class="navSpan">Art</span></li>
+<!--           <li class="navBtns" id="designBtn" role="button"><span class="navSpan">Design | Graphics</span></li>
+          <li class="navBtns" id="artBtn" role="button"><span class="navSpan">Art</span></li> -->
           <li class="navBtns" id="aboutBtn" role="button"><span class="navSpan">Contact | About</span></li>
         </ul>
       </div>
@@ -368,7 +368,7 @@
         </div>
       </div> 
     </div>
-
+<!-- 
     <div class="container" id="designDiv">
       <div class="row" id="designRowOne">
         <h1 class="designHead">Concert Posters</h1>
@@ -511,7 +511,7 @@
 
 
     </div>
-
+ -->
     <div id="aboutDiv">
       <div class="row aboutRow">
         <div class="col aboutBtwnBanners">
