lots added and style updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Joe Wright</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900|Roboto:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900|Oswald:400,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
   </head>
 
@@ -48,6 +48,10 @@
           <div class="col">
             <h1>Joe Wright</h1>
             <h3>Full Stack Developer</h3>
+            <a href="assets/images/JoeWrightResume.pdf" download>
+              <br>
+            <button type="button" class="btn btn-outline-light">Download Resume</button>
+            </a>
             <span id="resumeDownArrow">&darr;</span>
           </div>
         </div>
@@ -275,7 +279,7 @@
             <h3 class="experienceTitleLead">Work Experience</h3>
                 <div class="experienceWrapper">
                 <div class="companyWrapper">
-                  <div class="experienceTitle">FurnitureLab</div>
+                  <div class="experienceTitle"><a href="https://www.furniturelab.com/" target="_blank">FurnitureLab</a></div>
                   <div class="time">June 2017 - Jan 2018</div>
                 </div>
                 <div class="jobWrapper">
@@ -289,7 +293,7 @@
                   </div>
                 </div>
                 <div class="companyWrapper">
-                  <div class="experienceTitle">Spoonflower</div> 
+                  <div class="experienceTitle"><a href="https://www.spoonflower.com/" target="_blank">Spoonflower</a></div> 
                   <div class="time">Aug 2015 - July 2017</div> 
                 </div>
                 
@@ -371,7 +375,7 @@
                     <div class="back" id="listenHereBack">
                       <br>
                       <br>
-                      <p>
+                      <p class="text">
                         Mobile/Browser App.  <br> Uses 6 APIs to preview and build same day local music experiences.  End Page in Development; Click to Visit.
                       </p>
                     </div>
@@ -390,7 +394,7 @@
                         <br>
                         <br>
                         <br>
-                        <p>
+                        <p class="text">
                           Event Management Site commissioned by the Bernaroo Festival in New Bern, NC.  In Progress; Click to Visit.
                         </p>
                       </div>
@@ -418,7 +422,7 @@
                       <br>
                       <br>
                       <br>
-                      <p>
+                      <p class="text">
                           Mobile Responsive Portfolio,<br> built with Bootstrap Responsiveness
                       </p>
                     </div>
@@ -437,7 +441,7 @@
                       <br>
                       <br>
                       <br>
-                      <p>
+                      <p class="text">
                           Mobile Responsive Portfolio,<br> built without any CSS Library
                       </p>
                     </div>
@@ -595,7 +599,7 @@
 
     <div id="cultureFitDiv">
       <div id="progressArrows">
-        <img id="arrows" src="assets/images/arrows.png" alt="arrows">
+        <img id="catLoader" src="assets/images/robot.gif" alt="arrows">
       </div>
       <div id="catsAndDogs">
           <div class="jumbotron cultureBlock">
@@ -884,7 +888,6 @@
         </div>
       </div>
     </div>
-
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
