--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Joe Wright</title>
+    <link rel="icon" 
+      type="image/png" 
+      href="assets/images/jw.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900|Oswald:400,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
@@ -48,8 +51,8 @@
           <div class="col">
             <h1>Joe Wright</h1>
             <h3>Full Stack Developer</h3>
+            <br>
             <a href="assets/images/JoeWrightResume.pdf" download>
-              <br>
             <button type="button" class="btn btn-outline-light">Download Resume</button>
             </a>
             <span id="resumeDownArrow">&darr;</span>
